--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.12",
+    "apollo-client": "^2.2.3",
     "create-react-app-parcel-typescript": "0.0.5",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "parcel-plugin-typescript": "^1.0.0",
+    "react": "^16.4.2",
+    "react-apollo": "^2.1.9",
+    "react-dom": "^16.4.2"
   },
   "scripts": {
     "start": "react-scripts-parcel start",
     "build": "react-scripts-parcel build",
     "test": "react-scripts-parcel test --env=jsdom",
-    "eject": "react-scripts-parcel eject"
+    "eject": "react-scripts-parcel eject",
+    "generate-types": "apollo codegen:generate graphql-types --addTypename --queries=src/**/*.js --schema=./schema.json --target=typescript --watch",
+    "download-schema": "apollo schema:download --endpoint=https://w5xlvm3vzz.lp.gql.zone/graphql"
   },
   "browserslist": {
     "development": [
@@ -25,5 +31,9 @@
       "Firefox ESR",
       "not ie < 11"
     ]
+  },
+  "devDependencies": {
+    "apollo": "^1.6.0",
+    "typescript": "^3.0.1"
   }
 }
