--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts-parcel build",
     "test": "react-scripts-parcel test --env=jsdom",
     "eject": "react-scripts-parcel eject",
-    "generate-types": "apollo codegen:generate graphql-types --addTypename --queries=src/**/*.js --schema=./schema.json --target=typescript --watch",
+    "generate-types": "apollo codegen:generate graphql-types --addTypename --queries=src/**/*.js --schema=./schema.json --target=typescript",
     "download-schema": "apollo schema:download --endpoint=https://w5xlvm3vzz.lp.gql.zone/graphql"
   },
   "browserslist": {
